<resources>
    <string name="app_name">Love Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate">Calculate</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="first_name">First Name</string>
    <string name="emoji_heart">❤️</string>
    <string name="your_score">Your Score</string>
    <string name="try_again">Try Again</string>
    <string name="home">Home</string>
    <string name="emoji_blue_heart">💙</string>
    <string name="history">History</string>
    <string name="second_name">Second Name</string>
    <string name="it_s_funs_and_many_more">It\'s Funs and Many more</string>
    <string name="get_started">Get Started</string>
    <string name="have_a_good_time">Have a good time</string>
    <string name="you_should_take_the_time_to_help_those_nwho_need_you">You should take the time to help those\nwho need you</string>
    <string name="cherishing_love">Cherishing love</string>
    <string name="it_is_now_no_longer_possible_for_nyou_cherish_love">It is now no longer possible for\nyou cherish love</string>
    <string name="have_a_breakup">Have a breakup?</string>
    <string name="we_have_made_the_correction_for_you_ndon_t_worry_nmaybe_someone_is_waiting_for_you">We have made the correction for you\ndon\'t worry\nMaybe someone is waiting for you!</string>
    <string name="equals_symbol">=</string>
</resources>