<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_edit_text_name"
    android:padding="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="32dp"
    android:layout_marginVertical="8dp"
    android:layout_height="wrap_content">

    <TextView
        app:layout_constraintTop_toTopOf="@id/tv_heart"
        app:layout_constraintBottom_toBottomOf="@id/tv_heart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/equals_symbol"
        android:textSize="36sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/first_name" />

    <TextView
        android:id="@+id/tv_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emoji_heart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_first_name"
        app:layout_constraintStart_toStartOf="@+id/tv_second_name"
        app:layout_constraintTop_toBottomOf="@id/tv_first_name" />

    <TextView
        android:id="@+id/tv_second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_heart"
        tools:text="@string/second_name" />

    <ImageView
        android:id="@+id/iv_heart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintHeight_percent="1"
        android:src="@drawable/percentage_heart"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_heart"
        app:layout_constraintEnd_toEndOf="@id/iv_heart"
        app:layout_constraintStart_toStartOf="@id/iv_heart"
        app:layout_constraintTop_toTopOf="@id/iv_heart"
        tools:text="100%" />

</androidx.constraintlayout.widget.ConstraintLayout>